@@ -1,9 +1,12 @@
 package com.notes.configs;
 
+import lombok.Getter;
+import lombok.Setter;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.oauth2.jwt.JwtClaimNames;
 
+import java.io.Serial;
 import java.net.URL;
 import java.util.stream.Stream;
 
@@ -14,13 +17,13 @@ public class AuthorizeServerProperties {
 
    public IssuerProperties get(URL issuerUri) throws MisconfigurationException {
       final var issuerProperties = Stream.of(issuers).filter(iss -> issuerUri.equals(iss.getUri())).toList();
-      if (issuerProperties.size() == 0) {
+      if (issuerProperties.isEmpty()) {
          throw new MisconfigurationException("Missing authorities mapping properties for %s".formatted(issuerUri.toString()));
       }
       if (issuerProperties.size() > 1) {
          throw new MisconfigurationException("Too many authorities mapping properties for %s".formatted(issuerUri.toString()));
       }
-      return issuerProperties.get(0);
+      return issuerProperties.getFirst();
    }
 
    public IssuerProperties[] getIssuers() {
@@ -31,34 +34,12 @@ public class AuthorizeServerProperties {
       this.issuers = issuers;
    }
 
+   @Setter
+   @Getter
    public static class IssuerProperties {
       private URL uri;
       private ClaimMappingProperties[] claims;
       private String usernameJsonPath = JwtClaimNames.SUB;
-
-      public URL getUri() {
-         return uri;
-      }
-
-      public void setUri(URL uri) {
-         this.uri = uri;
-      }
-
-      public ClaimMappingProperties[] getClaims() {
-         return claims;
-      }
-
-      public void setClaims(ClaimMappingProperties[] claims) {
-         this.claims = claims;
-      }
-
-      public String getUsernameJsonPath() {
-         return usernameJsonPath;
-      }
-
-      public void setUsernameJsonPath(String usernameJsonPath) {
-         this.usernameJsonPath = usernameJsonPath;
-      }
 
       public static class ClaimMappingProperties {
          private String jsonPath;
@@ -96,6 +77,7 @@ public class AuthorizeServerProperties {
    }
 
    static class MisconfigurationException extends RuntimeException {
+      @Serial
       private static final long serialVersionUID = 5887967904749547431L;
 
       public MisconfigurationException(String msg) {
